# Copyright (C) 2004 Yuwu (Bruin) Xiong <xiongyw@hotmail.com>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

AC_PREREQ(2.59)
dnl AC_INIT(reconf)
AC_INIT(uhttpd, 0.0.2, xiongyw@hotmail.com)
dnl AM_INIT_AUTOMAKE(uhttpd,0.0.2)
AM_INIT_AUTOMAKE()
AC_CONFIG_SRCDIR([config.h.in])
AM_CONFIG_HEADER(config.h)


# Checks for programs.
AC_PROG_CC


# Checks for libraries.
AC_CHECK_LIB([m], [sqrt])
AC_CHECK_LIB([pthread], [pthread_create])
AC_CHECK_LIB([resolv], [gethostbyname])
AC_CHECK_LIB([socket], [socket])
AC_CHECK_LIB([nsl], [inet_ntoa])
AC_CHECK_LIB([rt], [sem_init])

# Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h fcntl.h netdb.h netinet/in.h stdlib.h string.h sys/socket.h syslog.h unistd.h])
 
# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_CLOSEDIR_VOID
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_MMAP
AC_FUNC_REALLOC
AC_TYPE_SIGNAL
AC_FUNC_STAT
AC_FUNC_STRFTIME
AC_CHECK_FUNCS([gethostbyname inet_ntoa memmove memset munmap socket strcasecmp strchr strerror strncasecmp strrchr strstr scandir alphasort])

dnl AC_CANONICAL_HOST
dnl AC_PROG_RANLIB
AC_CONFIG_FILES([Makefile
                 doc/Makefile
                 m4/Makefile
                 src/Makefile])
AC_OUTPUT
