# Copyright (C) 2004 Yuwu (Bruin) Xiong <xiongyw@hotmail.com>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
bin_PROGRAMS=uhttpd
uhttpd_SOURCES=uhttpd.h main.c get.h get.c readconf.h readconf.c util.h util.c tcpserver.h tcpserver.c response.h response.c urlencode.c proc.h proc.c
